# physical-ai

./: agent.py  app.py  book.txt  docusaurus.config.ts  ingest.py  merge_docs.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sidebars.js  test_qdrant.py
data/: chapter1.txt  chapter2.txt  chapter3.txt  chapter4.txt  chapter5.txt  chapter6.txt  chapter7.txt  chapter8.txt
docs/: index.md  package-lock.json
docs/chapter1/: index.md
docs/chapter2/: index.md
docs/chapter3/: index.md
docs/chapter4/: index.md
docs/chapter5/: index.md
docs/chapter6/: index.md
docs/chapter7/: index.md
docs/chapter8/: index.md
docs/docs/tutorial-basics/: markdown-features.mdx
history/prompts/constitution/: 1-update-physical-ai-humanoid-robotics-constitution.constitution.prompt.md
history/prompts/textbook-content/: 2-create-physical-ai-humanoid-robotics-textbook-specification.spec.prompt.md  3-create-physical-ai-humanoid-robotics-textbook-implementation-plan.plan.prompt.md  4-generate-physical-ai-humanoid-robotics-textbook-tasks.tasks.prompt.md
rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  rag-api - Shortcut.lnk
specs/1-textbook-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-textbook-content/checklists/: requirements.md
specs/1-textbook-content/contracts/: rag-chatbot-api.yaml
src/components/HomepageFeatures/: index.tsx
src/pages/: index.mdx  index.tsx
